--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,7 @@ spring:
 #        System.out.print 로 출력
 #        show_sql: true
         format_sql: true
+        default_batch_fetch_size: 100
 logging:
   level:
     org.hibernate.SQL: debug
